err/iw.recipe.backup.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/iw'...
Listing './lib/python3.5/site-packages/iw/recipe'...
Listing './lib/python3.5/site-packages/iw/recipe/backup'...
Compiling './lib/python3.5/site-packages/iw/recipe/backup/archive.py'...
***   File "./lib/python3.5/site-packages/iw/recipe/backup/archive.py", line 31
    os.makedirs(os.path.join(path, tarinfo.name), 0700)
                                                     ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/iw/recipe/backup/filestorage.py'...
***   File "./lib/python3.5/site-packages/iw/recipe/backup/filestorage.py", line 22
    bytesread = 0L
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iw/recipe/backup/testing.py'...
***   File "./lib/python3.5/site-packages/iw/recipe/backup/testing.py", line 12
    print '%s %s' % (msg, res)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iw/recipe/backup/tests'...
Listing './lib/python3.5/site-packages/iw.recipe.backup-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
